# GstCustomAlloc

docs/: design.md  dmabuf_allocator_design.md  gst-dmabuf-memory-design.md  h264parse_analysis.md
src/: gstcodecdmabufallocator.c  gstcodecdmabufallocator.h  gstcodecdmabufconfig.h  gstcodecdmabufdesc.c  gstcodecdmabufdesc.h  gstcodecdmabufdriver.c  gstcodecdmabufdriver.h  gstcodecdmabufmemory.c  gstcodecdmabufmemory.h  meson.build
